--- a/radiant-legacy/src/App.css
+++ b/radiant-legacy/src/App.css
@@ -6,6 +6,12 @@
   text-align: center;
 }
 
+html,
+body {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -418,7 +424,7 @@ footer .hover\:text-warning:hover {
 }
 
 .dashboard-wrapper {
-  padding-top: 100px; 
+  padding-top: 100px;
 }
 
 .dashboard-glass {
